--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> //needs to be updated -->
+    <link rel="icon" type="image/svg+xml" href="/target-icon.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Achiever's Goals & Advisors Dashboard</title>
     <meta name="title" content="Apex - Achiever's Goals & Advisors Dashboard" />
